--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section id="user-login" class="section">
         <h3>Track Your Progress</h3>
         <form id="user-form">
-          <input type="text" id="username" placeholder="Your Email Address" required>
+          <input type="text" id="username" placeholder="Your Username">
           <button type="submit">Start Tracking</button>
           <p id="user-message"></p>
         </form>
